# scientia-core

./: .gitignore  .pre-commit-config.yaml  README.md  USAGE.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
src/: __init__.py
src/app/: __init__.py  app.py
src/data/: __init__.py  bookmarks.py  config.py  data_directory.py  history.py
src/dialogs/: __init__.py  directory_picker.py  error.py  help_dialog.py  information.py  input_dialog.py  knowledge_sync.py  progress_screen.py  text_dialog.py  yes_no_dialog.py
src/screens/: __init__.py  main.py
src/utility/: __init__.py
src/utils/: __init__.py  type_tests.py  update_utils.py
src/widgets/: __init__.py  find_bar.py  helpers.py  navigation.py  omnibox.py  viewer.py
src/widgets/navigation_panes/: __init__.py  bookmarks.py  history.py  local_files.py  navigation_pane.py  table_of_contents.py
tests/: conftest.py  test_dialogs.py  test_main_screen.py  test_navigation.py  test_omnibox.py  test_viewer.py
